--- a/S_Pradeep_SoccerClub/src/app/content-card/content-card.component.html
+++ b/S_Pradeep_SoccerClub/src/app/content-card/content-card.component.html
@@ -1,4 +1,8 @@
-<div *ngFor="let content of contentList.getContentArray; let i = index">
-    <div [innerHTML]="contentList.getContentDetails(i)"></div>
-    <hr>
-</div>
+<div class="content-card" [style.border]="index === 0 ? '2px solid black' : '1px solid black'">
+    <h2>{{ content.title }}</h2>
+    <img *ngIf="content.imgURL" [src]="content.imgURL" (click)="onImageClick()" alt="Image">
+    <p *ngIf="content.description">Description: {{ content.description }}</p>
+    <p *ngIf="content.creator">Creator: {{ content.creator }}</p>
+    <p *ngIf="content.type">Type: {{ content.type }}</p>
+    <p *ngIf="content.tags && content.tags.length > 0">Tags: {{ content.tags.join(', ') }}</p>
+  </div>
