--- a/S_Pradeep_SoccerClub/src/app/content-list/content-list.component.html
+++ b/S_Pradeep_SoccerClub/src/app/content-list/content-list.component.html
@@ -1,7 +1,18 @@
-<div *ngFor="let content of contentArray; let i = index" [class.first-card]="i === 0">
+<input type="text" [(ngModel)]="searchTitle" placeholder="Enter Content Title">
+<button (click)="searchContent()">Search</button>
+<div *ngFor="let type of typeList">
+  <h2>{{ type || 'No Type' }}</h2>
+  <div *ngFor="let content of contentArray | typeFilter: type"
+  >
     <app-content-card
       [content]="content"
-      [index]="i"
+      [index]="contentArray.indexOf(content)"
       (imageClick)="handleImageClick(content.id, content.title)"
-    ></app-content-card>
+      [style.color]="content.type === 'Club' ? 'blue' : (content.type === 'Player' ? 'pink' : 'orange')"
+      ></app-content-card>
   </div>
+</div>
+
+<div [style.color]="searchMessageColor">
+  {{ searchMessage }}
+</div>
