--- a/S_Pradeep_SoccerClub/src/app/content-list/content-list.component.html
+++ b/S_Pradeep_SoccerClub/src/app/content-list/content-list.component.html
@@ -1,3 +1,5 @@
+<app-create-content (createContent)="addContent($event)"></app-create-content>
+<p *ngIf="isError" class="error">Content Failed to be added</p>
 <input type="text" [(ngModel)]="searchTitle" placeholder="Enter Content Title">
 <button (click)="searchContent()">Search</button>
 <div *ngFor="let type of typeList">
