--- a/S_Pradeep_SoccerClub/src/app/app.component.html
+++ b/S_Pradeep_SoccerClub/src/app/app.component.html
@@ -5,5 +5,16 @@
   <h2>My Top 3 Soccer Clubs</h2>
   <hr>
 </div>
+<div class="content-card-wrapper" *ngIf="singleContent">
+  <app-content-card [content]="singleContent"></app-content-card>
+</div>
 
+<app-messages></app-messages>
+<br>
+<div class="form">
+  <label for="idInput">Enter ID Number:</label>
+  <input type="number" id="idInput" [(ngModel)]="inputId">
+  <button (click)="retrieveContentById()">Retrieve Content</button>
+</div>
+<br>
 <app-content-list></app-content-list>
